fixed small-centered class so it only centers on small

--- a/scss/foundation/components/_grid.scss
+++ b/scss/foundation/components/_grid.scss
@@ -173,7 +173,7 @@ $total-columns: 12 !default;
     .columns.small-centered {
       margin-#{$default-float}: 0;
       margin-#{$opposite-direction}: 0;
-      float: $default-float !important;
+      float: none !important;
     }
 
     .column.large-centered,
